--- a/style.css
+++ b/style.css
@@ -37,6 +37,13 @@ h1 {
 
 }
 
+h2 {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-top: 60px;
+  text-align: center;
+}
+
 h3 {
   text-align: center;
   text-transform: uppercase;
