--- a/style.css
+++ b/style.css
@@ -172,8 +172,14 @@ button.new-bt {
   text-align: center;
 }
 
-footer {
+#new p {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
 
+footer {
+  margin-bottom: 20px;
   bottom: 0;
   position: fixed;
   width: 100%;
@@ -183,4 +189,44 @@ footer {
 footer p a {
   text-decoration: none;
   color: #504a4b;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  .container-2 {
+    display: block;
+    
+  }
+
+  p {
+    font-size: 15px;
+  }
+
+  .button-inicio {
+    display: flex;
+    justify-content: center;
+    margin-top: -25px;
+  }
+
+  .button-inicio a input {
+    justify-content: center;
+    margin: 50px;
+    width: 50px;
+    background-color: #0A3871;
+    font-size: 10px;
+    color: #FFFFFF;
+    border: 1px solid #070707;
+    border-radius: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+
+  .container-3 {
+    margin-top: -50px;
+  }
+  
 }
